fixed spacing at the top of add project component

--- a/Client/src/Components/AddProject/AddProject.scss
+++ b/Client/src/Components/AddProject/AddProject.scss
@@ -10,6 +10,7 @@ html {
     overflow-y: scroll;
     overflow-x: hidden;
     margin-bottom: 4rem;
+    margin-top: 3rem;
 }
 
 .add-project-page {
